// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeButton accept jsx as children 1`] = `
<span
  className="css-1y9h215"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  <span>
    string
  </span>
</span>
`;

exports[`BadgeButton danger 1`] = `
<span
  className="css-1xxnw2a"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  danger
</span>
`;

exports[`BadgeButton default 1`] = `
<span
  className="css-1y9h215"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  default
</span>
`;

exports[`BadgeButton outline 1`] = `
<span
  className="css-8kcf51"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  outline
</span>
`;

exports[`BadgeButton primary 1`] = `
<span
  className="css-1dm7z7o"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  primary
</span>
`;

exports[`BadgeButton success 1`] = `
<span
  className="css-1okiqml"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  success
</span>
`;

exports[`BadgeButton warning 1`] = `
<span
  className="css-2q4otv"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  warning
</span>
`;
